<resources>
    <string name="app_name">FrameWorkDemo</string>
    <string name="bugly_app_id">aafe177741</string>
    <string name="mob_app_key">2940613d85d74</string>
    <string name="mob_app_secret">d34eee77c260b117a3aaedeccdff911e</string>

    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_subtitle">www.baidu.com</string>
    <string name="nav_header_title">个人简介</string>
    <string name="action_settings">Setting</string>

    <string name="tv_menu">菜单</string>
    <string name="tv_menu_1">个人信息</string>
    <string name="tv_menu_2">设置</string>
    <string name="tv_menu_3">分享</string>
    <string name="tv_menu_4">关于</string>
    <string name="tv_menu_5">帮助</string>
    <string name="tv_menu_6">注销</string>
    <string name="tv_menu_7">退出</string>
    <string name="tv_menu_8">线路</string>

    <string name="menu_item_switch">代理</string>
    <string name="menu_item_toggle_global">开/关全局模式</string>
    <string name="menu_item_about">关于</string>
    <string name="menu_item_exit">退出</string>

    <string name="string_pay_cancel">支付已取消</string>
    <string name="string_pay_channel_error">支付通道错误</string>
    <string name="string_pay_invalid_channel">无效的支付通道</string>
    <string name="string_pay_network_exception">网络异常</string>
    <string name="string_pay_ok">支付成功</string>
    <string name="string_pay_unsupport">不支持该方式支付</string>

    <string name="string_loading">加载中...</string>
    <string name="string_login_overdue">登录过期，请重新登录</string>

    <string name="tv_username">账号</string>
    <string name="tv_password">密码</string>
    <string name="tv_register">注册</string>
    <string name="tv_forget">忘记密码</string>
    <string name="tv_remember">记住密码</string>
    <string name="tv_login">登&#160;&#160;&#160;&#160;录</string>


    <string name="all_pic">全部图片</string>
    <string name="preview_without_num">预览</string>
    <string name="preview_with_num">预览(%1$d)</string>
    <string name="choose_pic_finish">完成</string>
    <string name="choose_pic_finish_with_num">完成(%1$d/%2$d)</string>
    <string name="choose_pic_num_out_of_index">你最多只能选择%1$d张照片</string>
    <string name="choose_pic">选择</string>
    <string name="not_choose_any_pick">你还没有选择任何图片</string>
    <string name="uploading_images">正在批量上传</string>


    <string name="accessibility_tip">开启辅助功能Sample</string>
    <string name="accessibility_desc">开启辅助功能，让你的手机更智能一点</string>



    <string name="wx_packet_open">com.tencent.mm:id/cv0</string>
    <string name="wx_packet_get">com.tencent.mm:id/ao4</string>
    <string name="wx_packet_back">com.tencent.mm:id/k4</string>
    <string name="wx_packet_close">com.tencent.mm:id/cs9</string>
    <string name="wx_packet_timeout">com.tencent.mm:id/cuz</string>
</resources>
