<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_1"
            android:icon="@drawable/vector_drawable_info"
            android:title="@string/tv_menu_1" />
        <item
            android:id="@+id/nav_2"
            android:icon="@drawable/vector_drawable_setting"
            android:title="@string/tv_menu_2" />
        <item
            android:id="@+id/nav_3"
            android:icon="@drawable/vector_drawable_share"
            android:title="@string/tv_menu_3" />
    </group>

    <item android:title="其他">
        <menu>
            <item
                android:id="@+id/nav_4"
                android:icon="@drawable/vector_drawable_about"
                android:title="@string/tv_menu_4" />

            <item
                android:id="@+id/nav_5"
                android:icon="@drawable/vector_drawable_log_out"
                android:title="@string/tv_menu_5" />

            <item
                android:id="@+id/nav_6"
                android:icon="@drawable/vector_drawable_exit"
                android:title="@string/tv_menu_7" />
        </menu>
    </item>
</menu>
